--- a/.i3/config
+++ b/.i3/config
@@ -40,7 +40,7 @@ set $alt Mod1
 ###########################  GLOBAL HOTKEYS  ###########################
 
 # MPD (mpc)
-bindsym Control+$alt+Insert       exec mpc -h "someone@localhost" toggle
+bindsym Control+$alt+Insert       exec ~/mpc_toggle.sh
 bindsym Control+$alt+Page_Up      exec mpc -h "someone@localhost" prev
 bindsym Control+$alt+Page_Down    exec mpc -h "someone@localhost" next
 bindsym Control+$alt+Up           exec amixer -q sset PCM 2%+
