Ignoring everything to begin with

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-.i3/mpd_host
-.i3/mpc_toggle.sh
-.i3/mpc_next.sh
-.i3/mpc_prev.sh
+#.i3/mpd_host
+#.i3/mpc_toggle.sh
+#.i3/mpc_next.sh
+#.i3/mpc_prev.sh
+
+
+.Xresources
+.conkyrc
+.rtorrent.rc
+.vimperatorrc
+.xinitrc
+.zprofile
+.zshrc
+i3
+mopidy
+mplayer
+ranger
+uzbl
+vim
